--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json"
-    
   },
   "dependencies": {
+    "@nestjs/axios": "^4.0.1",
     "@nestjs/common": "^11.0.1",
     "@nestjs/core": "^11.0.1",
     "@nestjs/jwt": "^11.0.1",
@@ -30,10 +30,10 @@
     "@nestjs/websockets": "^11.1.9",
     "@prisma/client": "^5.22.0",
     "bcrypt": "^6.0.0",
+    "google-auth-library": "^10.5.0",
     "livekit-server-sdk": "^2.15.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
-    
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "socket.io": "^4.8.1",
